Implementação de relacionamento N:N - Tabela de Autores do Livro

--- a/java2_aula_jdbc/src/forms/LivroForm.form
+++ b/java2_aula_jdbc/src/forms/LivroForm.form
@@ -273,8 +273,10 @@
         <Component class="javax.swing.JButton" name="btnAddAutor">
           <Properties>
             <Property name="text" type="java.lang.String" value="Add"/>
-            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddAutorActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnRemoveAutor">
           <Properties>
